<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2022 Critical TechWorks, SA
 SPDX-License-Identifier: Apache-2.0
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingBottom="30dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="5dp"
            android:text="@string/today" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:padding="20dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="7.5dp"
                    android:text="@string/non_english_greeting" />

                <TextView
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="7.5dp"
                    android:text="@string/greeting_meaning" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="15dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="175dp"
                        android:contentDescription="@string/master_mth"
                        android:src="@drawable/master_mth" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/notification_icon"
                                android:src="@drawable/ic_bell"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/new_notifications" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/meetings_icon"
                                android:src="@drawable/ic_people"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/new_meetings" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/trip_icon"
                                android:src="@drawable/ic_plane"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/business_trips" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:padding="20dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="7.5dp"
                    android:text="@string/notifications_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="15dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="175dp"
                        android:contentDescription="@string/it_inspector"
                        android:src="@drawable/it_inspector" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/missed_calls_icon"
                                android:src="@drawable/ic_missed_call"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/missed_calls" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:src="@drawable/ic_message"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="101 unread messages" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/upcoming_events_icon"
                                android:src="@drawable/ic_clock"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/upcoming_events" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:padding="20dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="7.5dp"
                    android:text="@string/trainings_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="15dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="175dp"
                        android:contentDescription="@string/jimos"
                        android:src="@drawable/jimos" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/mandatory_trainings_icon"
                                android:src="@drawable/ic_warning"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mandatory_trainings" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/security_trainings_icon"
                                android:src="@drawable/ic_security"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/security_trainings" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:contentDescription="@string/master_class_icon"
                                android:src="@drawable/ic_piano"
                                app:tint="@color/primaryColor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/master_classes" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>