<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2022 Critical TechWorks, SA
 SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="15dp">

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:importantForAutofill="no"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/description_hint"
        android:importantForAutofill="no"
        android:inputType="textLongMessage" />

    <EditText
        android:id="@+id/event_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/tags"
        android:importantForAutofill="no"
        android:inputType="text" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="-20dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

</LinearLayout>