<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2022 Critical TechWorks, SA
 SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.activities.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:elevation="40dp"
        android:src="@mipmap/ic_launcher" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="-90dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-7.5dp"
                android:gravity="center"
                android:paddingTop="90dp"
                android:text="@string/login_title"
                android:textColor="@color/primaryDarkColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/login_subtitle"
                android:textColor="@color/primaryColor"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autofillHints="emailAddress"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autofillHints="password"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>