<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2022 Critical TechWorks, SA
 SPDX-License-Identifier: Apache-2.0
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"

        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="7dp"
                    android:paddingTop="7dp">

                    <ImageView
                        android:id="@+id/notification_badge"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/unread_badge"
                        android:src="@drawable/ic_circle"
                        app:tint="@color/primaryColor" />

                    <ImageView
                        android:id="@+id/notification_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/notification_icon"
                        android:src="@drawable/ic_message" />

                    <TextView
                        android:id="@+id/notification_title"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/sample_user"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/notification_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.70"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:paddingHorizontal="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/sample_message" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/notification"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mark_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <ImageView
                        android:id="@+id/read_unread_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/mark_button"
                        android:src="@drawable/ic_read" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/delete_notification_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/delete_notification"
                        android:src="@drawable/ic_trash" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>